feat: use Java 21 virtual threads; accept JSON-RPC string ids
Java 21 features applied:

- McpServer.tryFetchRoots: spawn a virtual thread instead of a
  platform thread. The work is a one-shot blocking wait on a stdio
  response (or its 2s timeout), so a virtual thread is the right
  fit and avoids tying up a carrier thread for the duration.
- JdtIndexer.build: replace the fixed-size thread pool
  (min(sources, cores)) with
  Executors.newVirtualThreadPerTaskExecutor() and try-with-resources.
  Per-file parse is mostly CPU (AST build) but each task also does
  file I/O and JDT binding resolution, which can block on classpath
  jars. Virtual threads let us spawn one per file without capping at
  available cores, and AutoCloseable folds the shutdown +
  awaitTermination boilerplate into the resource block.
- MavenClasspathResolver.resolve: same swap from parallelStream to
  a virtual thread pool. The walk is I/O bound (Files.list + pom
  read for transitive deps), so virtual threads shine.

Other hardening:

- McpServer: extract a coerceId(Object) helper that accepts both
  Number and String ids (JSON-RPC 2.0 allows either), parsing strings
  via Long.parseLong. Used in both the response-to-future routing
  path and the request-id path. The old instanceof Number check
  silently dropped string-id responses, which is a spec violation
  even though most MCP hosts use numeric ids.
- JdtIndexer.relativize: drop the silent try/catch. Path#relativize
  only throws if a file is not under the project root, which
  ProjectLoader guarantees won't happen — letting it surface as a
  real error is more honest than masking it with an absolute path.
- McpServerTest: +2 tests for string-id response routing and
  non-numeric string-id rejection.

Tests: 59 → 61, all green.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>